--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div class="output"></div>
-    <script src="sheets.js"></script>
+    <script type="module" src="sheets.js"></script>
 </body>
 </html>
